--- a/amazon/descontos.ipynb
+++ b/amazon/descontos.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4  https://www.amazon.in/Portronics-Konnect-POR-1...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,31 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registros  1465\n",
-      "colunas: 9\n"
+      "C:\\Users\\mrxca\\AppData\\Local\\Temp\\ipykernel_17756\\2108962528.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  df['product_price'] = df['product_price'].str.replace('₹', '').str.replace('.', '').str.replace(',', '.')\n",
+      "C:\\Users\\mrxca\\AppData\\Local\\Temp\\ipykernel_17756\\2108962528.py:5: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  df['actual_price'] = df['actual_price'].str.replace('₹', '').str.replace('.', '').str.replace(',', '.')\n"
      ]
     }
    ],
    "source": [
-    "quantidade_registros = len(df)\n",
-    "print(\"Registros \", quantidade_registros)\n",
-    "print(\"colunas:\",df.shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tratando dados\n",
+    "# tratando/limpar dados\n",
     "df['product_price'] = df['product_price'].str.replace('₹', '').str.replace('.', '').str.replace(',', '.')\n",
     "df['product_price'] = df['product_price'].astype(float)\n",
     "\n",
@@ -226,6 +217,132 @@
     "df['rating'] = df['rating'].astype(float)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registros  1465\n",
+      "colunas: 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_price</th>\n",
+       "      <th>product_price</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>rating_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1.465000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3077.617693</td>\n",
+       "      <td>5365.248840</td>\n",
+       "      <td>4.432198</td>\n",
+       "      <td>2.166947e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6860.277463</td>\n",
+       "      <td>10743.796284</td>\n",
+       "      <td>0.226138</td>\n",
+       "      <td>9.132905e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>314.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>4.490000</td>\n",
+       "      <td>9.100000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>799.000000</td>\n",
+       "      <td>1645.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.003000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1999.000000</td>\n",
+       "      <td>4199.000000</td>\n",
+       "      <td>4.510000</td>\n",
+       "      <td>1.466700e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>77990.000000</td>\n",
+       "      <td>139900.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>2.051952e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual_price  product_price       rating  rating_count\n",
+       "count   1465.000000    1465.000000  1465.000000  1.465000e+03\n",
+       "mean    3077.617693    5365.248840     4.432198  2.166947e+04\n",
+       "std     6860.277463   10743.796284     0.226138  9.132905e+04\n",
+       "min        2.500000      38.000000     0.000000  0.000000e+00\n",
+       "25%      314.000000     800.000000     4.490000  9.100000e+02\n",
+       "50%      799.000000    1645.000000     4.500000  4.003000e+03\n",
+       "75%     1999.000000    4199.000000     4.510000  1.466700e+04\n",
+       "max    77990.000000  139900.000000     5.000000  2.051952e+06"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantidade_registros = len(df)\n",
+    "print(\"Registros \", quantidade_registros)\n",
+    "print(\"colunas:\",df.shape[1])\n",
+    "# df.info()\n",
+    "df.describe()"
    ]
   },
   {
@@ -512,6 +629,7 @@
     }
    ],
    "source": [
+    "# Normalizar dados\n",
     "produtos_abaixo_de_50 = (df['actual_price_BLR'] < 50).sum()\n",
     "media_abaixo_de_50 = df[df['actual_price_BLR'] < 50]['actual_price_BLR'].mean()\n",
     "\n",
@@ -717,6 +835,21 @@
     "df_styled = df_sorted.style.applymap(highlight_porcent, subset=['porcent'])\n",
     "\n",
     "# df_styled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Desafios do dia 4:\n",
+    "\n",
+    "*  Usando o Google Colab com Python e Pandas, criar uma nova coluna chamada “actual_price_real”, que será o valor da coluna “actual_price” convertido para reais (dica: você pode apenas multiplicar o valor em rúpias por 0.05, como fizemos na Aula 01, ou então buscar o valor de hoje da conversão entre rúpias indianas e reais brasileiros no Google).\n",
+    "\n",
+    "* Realizar as análises que foram executadas nas aulas anteriores usando o Google Sheets, mas agora utilizando Python e Pandas no Google Colab.\n",
+    "\n",
+    "* Conectar as duas planilhas usadas nas aulas anteriores, como fizemos com o VLOOKUP, mas usando Python e Pandas.\n",
+    "\n",
+    "* Colocar a base já corrigida na biblioteca Pandas Profiling citada no conteúdo extra.\n"
    ]
   }
  ],
